# assetclaw-matting-bot

./: -File  .env  .env.example  .gitignore  AnimTextureImportEditorWindow.cs  AnimTextureImportModule.cs  README.md  bili_dynamic_emoji_downloader.py  cookie.example.txt  cookie.txt  pyproject.toml  requirements.txt  start_public_webui.bat  stop_public_webui.bat  web_temporal_smooth.py
Cherry_后处理网页_源码_20260615_0658/: README.txt  __init__.py  node_alpha_denoise.py  node_blur_under_composite.py  node_ps_resize.py  node_sharpen.py  node_temporal_smooth.py  web_temporal_smooth.py
Cherry_帧序列处理工具/: web_temporal_smooth.py
Cherry_帧序列处理工具_1/: README.md  requirements.txt  web_temporal_smooth.py  启动.sh
Cherry_帧序列处理工具_2/: web_temporal_smooth.py  启动.bat
anim-texture-rename-pipeline/: SETUP.md  SKILL.md  reference.md
configs/: app.example.yaml  workflows.example.yaml
docs/: ANIMATION_UNITY_READY.md  ARCHITECTURE.md  BATCH_MATTING_SOP.md  BRAIN_ROUTER.md  CODE_AUDIT_2026-07-23.md  COMFYUI_WORKFLOW.md  C_DRIVE_MIGRATION.md  FEISHU_BOT_USAGE.md  FEISHU_SETUP.md  FUTURE_SKILLS.md  GPU_CONTROL_MATTING_HANDOFF_V1.md  GPU_CONTROL_MATTING_HANDOFF_V2_IMPLEMENTATION.md  GPU_CONTROL_SCHEDULER_HANDSHAKE_V2_1.md  MATTING_WORKFLOW.md  OPENCLAW_INTEGRATION.md  OPERATIONS.md  QUICKSTART.md  REPOSITORY_HYGIENE.md  ROADMAP.md  SECURITY.md  SKILLS.md  SKILLS_GUIDE.md  SKILL_PERMISSION_MATRIX.md  TROUBLESHOOTING.md  WIN3090_FULL_SETUP.md  p4_shelve_only_workflow.md
external_webui/: README.md  app.js  index.html  package-lock.json  package.json  server.py  styles.css  vite.config.js  vue_index.html
feishu_frame_tool/: .gitignore  README.md  config.example.json  dedup.py  extractor.py  feishu_client.py  gui.py  requirements.txt  run.py  workflow.py  启动工具.bat
miratsu_stickers/: manifest.jsonl
scripts/: check_repo_hygiene.ps1  check_two_frame_alpha.py  cherry_batch_worker.py  clean_project.ps1  direct_video_worker.py  export_animation_resource_json.py  export_feishu_table_json.py  (+54 more)
(+604 files in other folders)
