[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "assetclaw-matting-bot"
version = "0.1.0"
description = "Feishu bot + ComfyUI matting pipeline for Windows GPU machines"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0.84",
    "torch>=2.3.0",
    "Flask>=3.0.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    "psutil>=5.9.8",
    "rich>=13.7.0",
    "lark-oapi>=1.3.0",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1.12",
    "pyttsx3>=2.90",
]
speech = [
    "modelscope>=1.20.0",
    "funasr>=1.2.0",
    "faster-whisper>=1.1.0",
    "openai-whisper>=20240930",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "storage",
    "logs",
    "data",
    "ComfyUI",
    "models",
    "checkpoints",
]
